Bug 91544 - [i965, regression, bisected] regression of several tests in 93977d3a151675946c03e
Summary: [i965, regression, bisected] regression of several tests in 93977d3a151675946...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: glsl-compiler (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Ian Romanick
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
: 91565 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-08-03 23:33 UTC by Dylan Baker
Modified: 2015-08-06 02:58 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Dylan Baker 2015-08-03 23:33:44 UTC
piglit.spec.glsl-1_50.execution.geometry.clip-distance-bulk-copy                                                                                                                                      
piglit.spec.glsl-1_50.execution.geometry.clip-distance-in-values                                                                                                                                    
piglit.spec.glsl-1_50.transform-feedback-type-and-size                                                                                                                                                         
piglit.spec.glsl-1_50.linker.intrastage-pervertex-in-redeclaration-unneeded                                                                                                               
piglit.spec.glsl-1_50.execution.geometry.clip-distance-in-explicitly-sized                                                                                                               
piglit.spec.arb_separate_shader_objects.validateprogrampipeline
piglit.spec.glsl-1_50.execution.geometry.clip-distance-in-bulk-read
piglit.spec.glsl-1_50.execution.gs-redeclares-pervertex-out-only

This seems like a red herring, but I can reproduce this on my HSW system personally. Note that some of the tests fail sporatically
Comment 1 Ian Romanick 2015-08-04 01:40:38 UTC
Ken mentioned similar failures that bisected to 7ac946e546bba440f87ce95ef022745201744f9c.

There's probably some field that was getting initialized to zero previously that's getting a non-zero value now.  I'll take a look at it tomorrow.
Comment 2 Ian Romanick 2015-08-04 01:55:34 UTC
Just skimming the code, I'll bet a quarter that the problem is stream being initialized to -1 instead of 0.  ir_variable has become such a complete disaster. :(
Comment 3 Ian Romanick 2015-08-05 15:55:51 UTC
*** Bug 91565 has been marked as a duplicate of this bug. ***
Comment 4 Ian Romanick 2015-08-05 15:56:14 UTC
There is a patch on the list for this:

http://lists.freedesktop.org/archives/mesa-dev/2015-August/090803.html
Comment 5 Michel Dänzer 2015-08-06 02:58:30 UTC
Module: Mesa
Branch: master
Commit: f7ac4ef4eeea737115d0b574fed7ecae46426072
URL:    http://cgit.freedesktop.org/mesa/mesa/commit/?id=f7ac4ef4eeea737115d0b574fed7ecae46426072

Author: Michel Dänzer <michel.daenzer@amd.com>
Date:   Wed Aug  5 18:17:14 2015 +0900

glsl: Initialize patch member of glsl_struct_field


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.